--- a/Server/package.json
+++ b/Server/package.json
@@ -12,9 +12,10 @@
     "bcryptjs": "^2.4.3",
     "cookieparser": "^0.1.0",
     "dotenv": "^16.0.3",
+    "env": "^0.0.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.2",
+    "mongoose": "^6.9.0",
     "node": "^19.3.0",
     "nodemon": "^2.0.20"
   }
