--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "cookie": "^0.5.0",
+    "cookies": "^0.8.0",
     "history": "^5.3.0",
     "npm": "^9.4.0",
     "react": "^18.2.0",
