--- a/Server/package.json
+++ b/Server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "cookieparser": "^0.1.0",
     "dotenv": "^16.0.3",
     "env": "^0.0.2",
@@ -17,6 +19,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "node": "^19.3.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "parser": "^0.1.4"
   }
 }
