--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "dotenv": "^16.0.3",
     "mongoose": "^6.8.2",
     "next": "^13.1.1",
